[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/player/texture/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/hpbar_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/player/orb_controller.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/xpbar_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes/level_up_menu/level_up.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/player/knife_controller.gd" type="Script" id=8]
[ext_resource path="res://scenes/player/shuriken_controller.gd" type="Script" id=9]
[ext_resource path="res://scenes/death_menu/death_menu.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0

[node name="Player" type="KinematicBody2D"]
z_index = 3
collision_layer = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Health" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 20.0

[node name="CC" type="CenterContainer" parent="Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -2.5
margin_right = 17.5
margin_bottom = 2.5

[node name="PBHP" type="ProgressBar" parent="Health/CC"]
margin_right = 35.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 35, 5 )
size_flags_vertical = 1
theme = ExtResource( 3 )
value = 100.0
percent_visible = false

[node name="XP" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_bottom = 25.0

[node name="CC" type="CenterContainer" parent="XP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -2.5
margin_right = 17.5
margin_bottom = 2.5

[node name="PBXP" type="ProgressBar" parent="XP/CC"]
margin_right = 35.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 35, 5 )
size_flags_vertical = 1
theme = ExtResource( 5 )
value = 100.0
percent_visible = false

[node name="Weapons" type="Node2D" parent="."]

[node name="Knives" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Shurikens" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Orbs" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="LevelUp" parent="." instance=ExtResource( 7 )]
pause_mode = 2

[node name="DeathMenu" parent="." instance=ExtResource( 10 )]

[node name="DebugLevelUp" type="Button" parent="."]
visible = false
margin_left = -216.0
margin_top = -54.0
margin_right = -94.0
margin_bottom = -34.0
text = "DEBUG: Level Up"

[node name="Invincible" type="Button" parent="."]
visible = false
margin_left = -216.0
margin_top = -30.0
margin_right = -94.0
margin_bottom = -10.0
text = "HACKER"

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -217.0
margin_top = -5.0
margin_right = -181.0
margin_bottom = 15.0
text = "Death"

[node name="DamageTicks" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="DebugLevelUp" to="." method="_on_DebugLevelUp_pressed"]
[connection signal="pressed" from="Invincible" to="." method="_on_Invincible_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="DamageTicks" to="." method="_on_DamageTicks_timeout"]
